--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "- database modeling.\r - migration scripts.\r - seeding.\r - knex.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm index.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,10 @@
   "homepage": "https://github.com/BlueEagle/node-db4-project#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^4.0.0",
     "knex": "^0.21.4",
+    "knex-cleaner": "^1.3.0",
+    "nodemon": "^2.0.4",
     "sqlite3": "^5.0.0"
   }
 }
